--- a/cottages.html
+++ b/cottages.html
@@ -20,6 +20,7 @@
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="cottages.html" class="active">Our Cottages</a></li>
+		    <li><a href="info.html">Information</a></li>
                     <li><a href="location.html">Location</a></li>
                     <li><a href="contact.html">Contact</a></li>
                     <li><a href="YOUR_SUPERCONTROL_LINK_HERE" target="_blank" class="cta-button nav-cta">Check Availability</a></li>
