--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
             <h2 class="intro_head">Welcome to Tregrill Farm</h2>
             <p>Nestled in a serene valley near Menheniot, Liskeard, Tregrill Farm offers three distinctively converted stone barns: Provence, New England, Moderno. Perfect for families, couples, and peaceful retreats.</p>
             <p>Tregrill Farm is situated in a small hamlet just 6 miles from the Cornish coast. From our tranquil setting you can visit the whole of Cornwall, South Devon, Bodmin Moor and Dartmoor, with countryside walks accessible directly from your door.</p>
-		  <p>We are a family run business with 4 generations of our family living on site. Our aim is simple, to provide "better than home" accommodation to make your holiday as enjoyable and relaxing as possible.  To help you settle in, we provide our guests with a small welcome basket of local goods and some basic provisions.</p>
-		  <p>Our cottages have been converted from typical Cornish Slate barns that date back to 1824 and retain many original features, they are set in an enclosed courtyard, each with its own private garden area.</p>
+		  <p>We are a family run business with 3 generations of our family living on site. Our aim is simple, to provide "better than home" accommodation to make your holiday as enjoyable and relaxing as possible.  To help you settle in, we provide our guests with a small welcome basket of local goods and some basic provisions.</p>
+		  <p>Our cottages have been converted from typical Cornish Slate barns that date back to 1824 and retain many original features, they are set in an enclosed courtyard, each with its own garden area.</p>
 		  <p>Each cottages is equipped with:
 		  <ul>
 		  <li>Flat Screen LCD TV</li>
@@ -73,7 +73,7 @@
 		  <li>Washing Machine</li>
 		  <li>Tumble Dryer</li>
 		  <li>Dishwasher</li>
-		  <li>Enclosed Garden</li>
+		  <li>Garden within enclosed courtyard</li>
 		  <li>Barbecue Area</li>
 		  <li><strong>Free WiFi access to superfast broadband</strong></li>
 		  <li>Fresh Towels and Linen</li>
