added privacy docs

--- a/info.html
+++ b/info.html
@@ -303,7 +303,7 @@
                 </a>
                 </div>
                 </p>
-            <p><a href="contact.html">Contact Us</a> | <a href="YOUR_SUPERCONTROL_LINK_HERE" target="_blank">Booking</a>
+            <p><a href="contact.html">Contact Us</a> | <a href="privacyNotice.html" target="_blank">Privacy Notice</a>
             </p>
         </div>
     </footer>
