--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
 
     <footer class="site-footer">
         <div class="container">
+           <div><a href="privacyNotice.html" target="_blank">Privacy Notice</a></div>
             <p>&copy; <span id="current-year"></span> Tregrill Farm Cottages. All Rights Reserved.
             <div  class ="social-icons">
             <a href="https://www.facebook.com/profile.php?id=100064976015560" target="_blank" class="social-icon">
@@ -191,6 +192,7 @@
                     <a href="https://www.cottages.com/cottages/tregrill-farm-cottages-new-england-uk12750?audience=ldc" target="_blank">New England</a>
                     <a href="https://www.cottages.com/cottages/tregrill-farm-cottages-moderno-uk12748?audience=ldc" target="_blank">Moderno</a>
                 </div>
+               
               </div>
         </div>
     </footer>
