--- a/privacyNotice.html
+++ b/privacyNotice.html
@@ -1572,7 +1572,7 @@
         <div class="umb-block-grid__layout-item" data-content-element-type-alias="richTextNoInlineEditBlock" data-content-element-type-key="af9c1f6c-1abe-4277-bfd3-820d2a742e60" data-element-udi="umb://element/779e653064b84dbfa52a44c65f7171c6" data-col-span="12" data-row-span="1" style=" --umb-block-grid--item-column-span: 12; --umb-block-grid--item-row-span: 1; ">
 
 <div class="prose prose-sm md:prose-base prose-h2:font-serif sm:prose-h2:border-l-10 sm:prose-h2:pl-3 sm:prose-h2:-ml-3 sm:prose-h2:relative sm:prose-h2:left-[-10px] prose-h3:font-serif sm:prose-lead:border-l-10 sm:prose-lead:pl-3 sm:prose-lead:-ml-3 sm:prose-lead:relative sm:prose-lead:left-[-10px] prose-hr:my-4 prose-h2:border-theme-yellow-light prose-lead:border-theme-yellow-light prose-theme-yellow sm:ml-[10px] sm:pl-3">
-    <p>All information we collect will only be kept for the minimum period required by law.</p>>
+    <p>All information we collect will only be kept for the minimum period required by law.</p>
 <p>For more information on how long we store your personal information or the criteria we use to determine this please contact us using the details provided above.</p>
 
 </div>
