--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                     <li><a href="info.html">Information</a></li>
                     <li><a href="location.html">Location</a></li>
                     <li><a href="contact.html">Contact</a></li>
+			<li><a href="findus.html">Find Us</a></li>
                     <li><a href="https://www.cottages.com/cottages/tregrill-farm-cottages-provence-uk12747?audience=ldc" target="_blank" class="cta-button nav-cta">Check Availability</a></li>
                 </ul>
             </nav>
