--- a/findus.html
+++ b/findus.html
@@ -24,7 +24,7 @@ The co-ordinates are: +50° 26' 35.59", -4° 25' 13.71" <br />
 <a href="holiday cottage docs/Tregrill Farm Holiday Cottage Directions.pdf">PDF</a></p>
 Alternatively, use the Google map below which amongst the many options includes the ability to create step by step directions from anywhere.
 <div class="embed-responsive embed-responsive-4by3">
-  <iframe src="https://storage.googleapis.com/maps-solutions-ixo3w0nsee/locator-plus/micy/locator-plus.html"
+ <iframe src="https://www.google.com/maps/d/embed?mid=1k3dmaKCCPs86IRhSb9ya9JVG30g&ehbc=2E312F" width="640" height="480"></iframe>
 
 </div>
 <hr class="featurette-divider">
