--- a/findus.html
+++ b/findus.html
@@ -19,6 +19,7 @@
 </tr>
 </table><br />
 The co-ordinates are: +50° 26' 35.59", -4° 25' 13.71" <br />
+What 3 words: ///moons.episode.motorist<br /> 
 <p>We have also created comprehensive directions in both word and PDF formats that you can download and print out:<br />
 <a href="holiday cottage docs/Tregrill Farm Holiday Cottage Directions.doc">Word</a><br />
 <a href="holiday cottage docs/Tregrill Farm Holiday Cottage Directions.pdf">PDF</a></p>
