--- a/findus.html
+++ b/findus.html
@@ -1,23 +1,8 @@
 <div class="row">
 <div class="col-xs-12">
 <h1>Find Us</h1>
-<p>Tregrill Farm Cottages are located just 10 minutes from the A38. To make finding us easier, we have created custom POIs for sat nav users.</p>
-<p>To download the POI for your sat nav, simply click on the file name next to your make of sat nav and then save the file. Follow the manufacturers instructions on how to install the POI.</p>
-
-<table border="0">
-<tr>
-<td class="col-md-6">Tom Tom   </td>
-<td><a href="http://www.tregrillfarmcottages.co.uk/poi/TregrillFarmCottages.ov2" target="_self">OV2 File</a></td>
-</tr>
-<tr>
-<td class="col-md-6">Garmin</td>
-<td><a href="http://www.tregrillfarmcottages.co.uk/poi/TregrillFarmCottages.csv" target="_self">CSV File</a></td>
-</tr>
-<tr>
-<td class="col-md-6">Navman</td>
-<td><a href="http://www.tregrillfarmcottages.co.uk/poi/TregrillFarmCottages Nav.csv" target="_self">CSV File</a></td>
-</tr>
-</table><br />
+<p>Tregrill Farm Cottages are located just 10 minutes from the A38.
+<br />
 The co-ordinates are: +50° 26' 35.59", -4° 25' 13.71" <br />
 What 3 words: <a href="https://w3w.co/moons.episode.motorist">///moons.episode.motorist</a><br /> 
 <p>We have also created comprehensive directions in both word and PDF formats that you can download and print out:<br />
