--- a/findus.html
+++ b/findus.html
@@ -1,3 +1,57 @@
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Beautiful self-catering holiday cottages near Menheniot, Cornwall. Tregrill Farm offers peaceful retreats in prov, neweng, and mod cottages.">
+    <title>Tregrill Farm Cottages - Holiday Cottages Cornwall</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style2.css">
+    <script src="js/jquery.js"></script>
+    
+    <script src="js/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/gsap.min.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/ScrollTrigger.min.js"></script>
+    <script>
+      // use a script tag or an external JS file
+      document.addEventListener("DOMContentLoaded", (event) => {
+       gsap.registerPlugin(ScrollTrigger)
+       // gsap code here!
+      });
+     
+     </script>
+    <!-- Add Favicon links here if you have one -->
+</head>
+<body>
+
+    <div class="site-header">
+        <div class="container">
+            <div class="logo">
+                <!-- <img src="images/logo.png" alt="Tregrill Farm Cottages Logo"> -->
+                <a href="index.html">Tregrill Farm Cottages</a>
+            </div>
+            <nav class="main-nav">
+                <button class="menu-toggle" aria-label="Toggle navigation" aria-expanded="false">&#9776;</button> <!-- Hamburger Icon -->
+                <ul class="nav-links">
+                    <li><a href="index.html" class="active">Home</a></li>
+                    <li><a href="cottages.html">Our Cottages</a></li>
+                    <!-- Maybe add dropdown for cottages or list them directly -->
+                    <!-- <li><a href="prov.html">prov</a></li> -->
+                    <!-- <li><a href="neweng.html">neweng</a></li> -->
+                    <!-- <li><a href="mod.html">mod</a></li> -->
+                    <li><a href="info.html">Information</a></li>
+                    <li><a href="location.html">Location</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+			<li><a href="findus.html">Find Us</a></li>
+                    <li><a href="https://www.cottages.com/cottages/tregrill-farm-cottages-provence-uk12747?audience=ldc" target="_blank" class="cta-button nav-cta">Check Availability</a></li>
+                </ul>
+            </nav>
+        </div>
+      </div>
+
+
 <div class="row">
 <div class="col-xs-12">
 <h1>Find Us</h1>
@@ -16,3 +70,4 @@ Alternatively, use the Google map below which amongst the many options includes 
 <hr class="featurette-divider">
 </div>
 </div>
+</body>
