--- a/findus.html
+++ b/findus.html
@@ -70,4 +70,31 @@ Alternatively, use the Google map below which amongst the many options includes 
 <hr class="featurette-divider">
 </div>
 </div>
+ <footer class="site-footer">
+        <div class="container">
+           <div><a href="privacyNotice.html" target="_blank">Privacy Notice</a></div>
+            <p>&copy; <span id="current-year"></span> Tregrill Farm Cottages. All Rights Reserved.
+            <div  class ="social-icons">
+            <a href="https://www.facebook.com/profile.php?id=100064976015560" target="_blank" class="social-icon">
+                <img src="images\Facebook_Logo_Primary.png" alt="Facebook Icon">
+            </a>
+            <a href="https://www.instagram.com/tregrillfarmcottages/" target="_blank" class="social-icon">
+                <img src="images\Instagram_Glyph_Gradient.png" alt="Instagram Icon">
+            </a>
+            </div>
+            </p>
+            <p><a href="contact.html">Contact Us</a> | <div class="dropdown">
+                <button class="dropdown-toggle">Booking</button>
+                <div class="dropdown-menu">
+                    <a href="https://www.cottages.com/cottages/tregrill-farm-cottages-provence-uk12747?audience=ldc" target="_blank">Provence</a>
+                    <a href="https://www.cottages.com/cottages/tregrill-farm-cottages-new-england-uk12750?audience=ldc" target="_blank">New England</a>
+                    <a href="https://www.cottages.com/cottages/tregrill-farm-cottages-moderno-uk12748?audience=ldc" target="_blank">Moderno</a>
+                </div>
+               
+              </div>
+        </div>
+    </footer>
+
+    <script src="js/cards.js"></script>
 </body>
+</html>
