--- a/findus.html
+++ b/findus.html
@@ -52,8 +52,7 @@
       </div>
 
 
-<div class="row">
-<div class="col-xs-12">
+ <section class="intro container reveal">
 <h1>Find Us</h1>
 <p>Tregrill Farm Cottages are located just 10 minutes from the A38.
 <br />
@@ -63,13 +62,11 @@ What 3 words: <a href="https://w3w.co/moons.episode.motorist">///moons.episode.m
 <a href="holiday cottage docs/Tregrill Farm Holiday Cottage Directions.doc">Word</a><br />
 <a href="holiday cottage docs/Tregrill Farm Holiday Cottage Directions.pdf">PDF</a></p>
 Alternatively, use the Google map below which amongst the many options includes the ability to create step by step directions from anywhere.
-<div class="embed-responsive embed-responsive-4by3">
+<div>
  <iframe src="https://www.google.com/maps/d/embed?mid=1k3dmaKCCPs86IRhSb9ya9JVG30g&ehbc=2E312F" width="640" height="480"></iframe>
+</div>	
+ </section>	
 
-</div>
-<hr class="featurette-divider">
-</div>
-</div>
  <footer class="site-footer">
         <div class="container">
            <div><a href="privacyNotice.html" target="_blank">Privacy Notice</a></div>
