--- a/findus.html
+++ b/findus.html
@@ -51,7 +51,7 @@
         </div>
       </div>
 
-
+<main>
  <section class="intro container reveal">
 <h1>Find Us</h1>
 <p>Tregrill Farm Cottages are located just 10 minutes from the A38.
@@ -66,7 +66,7 @@ Alternatively, use the Google map below which amongst the many options includes 
  <iframe src="https://www.google.com/maps/d/embed?mid=1k3dmaKCCPs86IRhSb9ya9JVG30g&ehbc=2E312F" width="640" height="480"></iframe>
 </div>	
  </section>	
-
+</main> 
  <footer class="site-footer">
         <div class="container">
            <div><a href="privacyNotice.html" target="_blank">Privacy Notice</a></div>
