--- a/findus.html
+++ b/findus.html
@@ -51,7 +51,7 @@
       </div>
 
 <main>
- <section class="intro container reveal">
+ <section class="cottage-previews reveal">
 <h1>Find Us</h1>
 <p>Tregrill Farm Cottages are located just 10 minutes from the A38.
 <br />
