--- a/findus.html
+++ b/findus.html
@@ -51,6 +51,7 @@
       </div>
 
 <main>
+    <section class="weather container reveal">
  <section class="cottage-previews reveal">
 <h1>Find Us</h1>
 <p>Tregrill Farm Cottages are located just 10 minutes from the A38.
@@ -65,6 +66,7 @@ Alternatively, use the Google map below which amongst the many options includes 
  <iframe src="https://www.google.com/maps/d/embed?mid=1k3dmaKCCPs86IRhSb9ya9JVG30g&ehbc=2E312F" width="640" height="480"></iframe>
 </div>	
  </section>	
+ </section>
 </main> 
  <footer class="site-footer">
         <div class="container">
